--- a/src/nasui/public/index.html
+++ b/src/nasui/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <title>React App</title>
+    <title>NNI NAS Board</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
